CHANGELOG and HISTORY ( we try )                                         Okatea
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||

= KEY ====================
	# Breaks back-compat
	! Feature
	- Bugfix
		+ Sub-comment
	. Internal change
==========================


1.0.BETA.4
! can now use external links in navigation menus
! add navigation items proper recordset
- fix news URL


1.0.BETA.3 (2013-11-05)
! new breadcrumb policy
! introduce flash messages
! introduce navigation menus management
! Okatea theme changes
! CodeMirror 3.19
! jQuery Cookie 1.4.0
! jQuery blockUI 2.66
. deletion of old stuff


1.0.BETA.2 (2013-08-22)
# now require PHP >= 5.3.7
# new registerModule signature
# rename "modules" table in "core_modules"
# move cache, common, conf, logs, and upload dirs
! Okatea is released under the MIT License
! strengthening cryptography by using new password_* natives functions
! CodeMirror 3.15
! jQuery select2 3.4.2
! jQuery mousewheel 3.1.3
. move VERSION and CHANGELOG files from oktDoc directory to root application
. deletion of old stuff


1.0.BETA.1 (2013-08-13)
! first public release